fixed some issues on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -66,9 +66,24 @@ input {
 	#map {
 		width: 100%;
 		height: 245px;
+		margin-top: 35px;
 	}
 	header img {
 		width: 300px;
 		height: 130px;
+	}
+}
+
+@media (max-width: 320px) {
+	#map {
+		width:300px;
+		height: 240px;
+	}
+	header img {
+		width: 300px;
+		height: 100px;
+	}
+	header {
+		margin-top: 0;
 	}
 }
